--- a/biostatistics.html
+++ b/biostatistics.html
@@ -62,7 +62,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30238'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -70,7 +70,7 @@
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/principal-biostatistician-3469'>Principal Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light">North Carolina, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n0QNUKwM'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -147,7 +147,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/oBrAafww'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/oBrAafww'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -159,7 +159,7 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/olqAafwf'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/olqAafwf'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -187,11 +187,11 @@ team regarding statistical methods for data analysis of clinical trials. Provide
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30142'>Principal Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-30142'>Principal Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -233,11 +233,11 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p>5 days ago ... Experience with Bayesian methods. ? Experience of statistical programming (e.g., 
 in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/grailbio/c277b1a5-1ff7-49f9-9af5-e4e120c5b46f'>GRAIL - Senior/Staff Assay Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/grailbio/c277b1a5-1ff7-49f9-9af5-e4e120c5b46f'>GRAIL - Senior/Staff Assay Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54097/biostatistics-asset-lead/job'>Biostatistics Asset Lead in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/54097/biostatistics-asset-lead/job'>Biostatistics Asset Lead in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 4, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
@@ -290,7 +290,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/veristat/job/o5yQ9fwm'>Veristat Careers - Biostatistician II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/veristat/job/o5yQ9fwm'>Veristat Careers - Biostatistician II</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -334,7 +334,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-06-20</p>
 <hr/>
-<h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-2902'>Biostatistician - PPD Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ppdi.referrals.selectminds.com/jobs/biostatistician-2902'>Biostatistician - PPD Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-18</p>
 <hr/>
@@ -390,7 +390,7 @@ Develops statistical analysis plans and reporting specifications for simple to?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-07</p>
 <hr/>
-<h5><a href='https://targethealth.recruiterbox.com/jobs/fk0jh4j/'>Biostatistician at Target Health Inc</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://targethealth.recruiterbox.com/jobs/fk0jh4j/'>Biostatistician at Target Health Inc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>1 day ago ... Provide statistical support for study design, data transfer, analysis, verification, 
 interpretation of results in clinical trials. Program datasets used for analysis?...</p>
@@ -447,11 +447,11 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/of0w9fwE'>Premier Research Careers - Senior Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/of0w9fwE'>Premier Research Careers - Senior Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/premier-research/job/ofPU9fwR'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/ofPU9fwR'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
@@ -459,7 +459,7 @@ interpretation of results in clinical trials. Program datasets used for analysis
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/56c7b602-5d75-4f64-adb6-bd138c84a8d9'>Ultragenyx Pharmaceutical Inc. - Sr. Manager/Manager, Biostatistics</a></h5> 
+<h5><a href='https://jobs.lever.co/ultragenyx/56c7b602-5d75-4f64-adb6-bd138c84a8d9'>Ultragenyx Pharmaceutical Inc. - Sr. Manager/Manager, Biostatistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-06</p>
 <hr/>
