--- a/statistics.html
+++ b/statistics.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796793'>Job Application for Senior Statistical Programmer  at JUUL Labs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/juullabs/jobs/1796793'>Job Application for Senior Statistical Programmer  at JUUL Labs</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -159,7 +159,7 @@ DVS) development in all therapeutic areas; writing specifications for analysis?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-24</p>
 <hr/>
-<h5><a href='https://abbvie.referrals.selectminds.com/jobs/director-statistics-immunology-rheumatology-10722'>Director, Statistics (Immunology/Rheumatology) - AbbVie Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/director-statistics-immunology-rheumatology-10722'>Director, Statistics (Immunology/Rheumatology) - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -180,11 +180,11 @@ at BAME Recruitment Limited.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nUIvPKwb'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oyrAafwt&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nUIvPKwb'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oprAafwk&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nK6vPKwp'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oprAafwk&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nK6vPKwp'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-21</p>
 <hr/>
@@ -253,7 +253,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/ovrAafwq'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/ovrAafwq'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -275,7 +275,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=olqAafwf&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nDycPKwr'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=olqAafwf&__jvst=Employee+Referral&__jvsd=ssyfAhwB&__jvsc=Twitter&bid=nDycPKwr'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
@@ -378,7 +378,7 @@ standards (ADaM) and a good understanding of conversion data structure?...</p>
 <p>Jul 9, 2019 ... Celerion is looking for a Biostatistician to join our global Data Management and 
 Biometrics team in Belfast, Northern Ireland. This role is responsible for the?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/14c02ece-2b6f-47be-8c7d-db186ea05893'>Ultragenyx Pharmaceutical Inc. - Associate Director, Biostatistics</a></h5> 
+<h5><a href='https://jobs.lever.co/ultragenyx/14c02ece-2b6f-47be-8c7d-db186ea05893'>Ultragenyx Pharmaceutical Inc. - Associate Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -407,7 +407,7 @@ Biometrics team in Belfast, Northern Ireland. This role is responsible for the?.
 <p>3 days ago ... Principal Data Scientist - Statistician. Venice, CA. Data Science. Full-time. Submit 
 your application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read?...</p>
 <hr/>
-<h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gsk.wd5.myworkdayjobs.com/GSKCareers/job/USA---Maryland---Rockville/Expert-Biostatistician_214332'>Expert Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Experience with Bayesian methods. ? Experience of statistical programming (e.g., 
 in SAS, R, Python). ? Experience with CDISC data format (SDTM and ADAM).</p>
@@ -426,7 +426,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p>Jul 4, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer/job'>Senior Statistical Programmer in</a></h5> 
+<h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer/job'>Senior Statistical Programmer in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 4, 2019 ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
